--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "node-eomp",
   "version": "1.0.0",
   "description": "",
-  
+  "engines": {
+    "node": "16.15.0"
+  },
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
