--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "json-web-token": "^3.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.19"
   }
